[tool.poetry]
name = "superstack"
version = "0.1.0"
description = ""
authors = ["zdanial <81705500+zdanial@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.11"
streamlit = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
